src/test/deca/syntax/invalid/SansObjet/Include-Loop.deca
// Description:
//    Test of a looping include
//
// Results:
//    test_lex is OK
//    test_synt should throw a CircularIncludeError
//
// History:
//    created on 06/01/2022

#include "Include-Loop.deca"
